--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,242 @@
 /*------------- Flexbox center mixin*/
 /*---------------Mixins for transforms, transitions and animations*/
 /*Mixin for animation on contact page*/
-/* MIX INS FOR HIDE & SHOW */
+/* MIXINS FOR HIDE & SHOW */
+/*------------------------navigation*/
+/* Mobile Navigation */
+#menu {
+  height: 5.5em;
+  width: 4em;
+  position: fixed;
+  top: 0.5em;
+  right: 24px;
+  /* z-index 11 to alwaus stay on top*/
+  z-index: 11; }
+  @media (min-width: 750px) {
+    #menu {
+      height: 6em;
+      width: 4.5em;
+      top: -0.5em; } }
+  @media (min-width: 1000px) {
+    #menu {
+      visibility: hidden; } }
+
+.overlay {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 10;
+  right: 0;
+  top: 24px;
+  background: #fa7f7f;
+  overflow-x: hidden;
+  padding-top: 2em;
+  -webkit-transform: skew(-15deg);
+  -moz-transform: skew(-15deg);
+  -ms-transform: skew(-15deg);
+  -o-transform: skew(-15deg);
+  transform: skew(-15deg);
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -ms-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
+  display: flex;
+  justify-content: center; }
+
+.overlay-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 2em;
+  -webkit-transform: skew(15deg);
+  -moz-transform: skew(15deg);
+  -ms-transform: skew(15deg);
+  -o-transform: skew(15deg);
+  transform: skew(15deg); }
+
+.overlay a {
+  padding: 8px;
+  text-decoration: none;
+  color: white;
+  font-size: 1.5rem;
+  line-height: 1.5;
+  transition: 0.5s; }
+  @media (min-width: 750px) {
+    .overlay a {
+      font-size: 2em; } }
+
+.overlay a:hover,
+.overlay a:focus {
+  color: #CCD7E4; }
+
+.arrow-nav {
+  cursor: pointer;
+  height: 1.5em;
+  margin: 1em; }
+
+.yellow_topbox {
+  background: #f8fba2;
+  position: relative;
+  left: -40vw;
+  width: 180vw;
+  height: 26rem;
+  margin: 0 auto;
+  margin-top: 10em;
+  z-index: 2;
+  -webkit-transform: rotate(25deg);
+  -moz-transform: rotate(25deg);
+  -ms-transform: rotate(25deg);
+  -o-transform: rotate(25deg);
+  transform: rotate(25deg); }
+
+.yellow_container {
+  position: absolute;
+  left: 0;
+  right: 0;
+  width: 50%;
+  max-width: 1200px;
+  margin: 0 auto; }
+
+.contact_circle {
+  position: relative;
+  background: #fa7f7f;
+  border-radius: 50%;
+  width: 6em;
+  height: 6em;
+  border: 0.5em solid #2E3641;
+  -webkit-transform: rotate(-25deg);
+  -moz-transform: rotate(-25deg);
+  -ms-transform: rotate(-25deg);
+  -o-transform: rotate(-25deg);
+  transform: rotate(-25deg); }
+  .contact_circle:first-child {
+    background: #CCD7E4; }
+  .contact_circle:last-child {
+    background: #a0e4b0; }
+  .contact_circle:hover {
+    z-index: 30;
+    cursor: pointer;
+    -webkit-transform: scale(1.7);
+    -moz-transform: scale(1.7);
+    -ms-transform: scale(1.7);
+    -o-transform: scale(1.7);
+    transform: scale(1.7);
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    transition: all 1s ease; }
+  @media (min-width: 750px) {
+    .contact_circle {
+      width: 7em;
+      height: 7em; } }
+
+.info {
+  width: 100%;
+  height: 100%;
+  -webkit-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
+  -ms-transform-style: preserve-3d;
+  -o-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  -webkit-transition: all 1s linear;
+  -moz-transition: all 1s linear;
+  -ms-transition: all 1s linear;
+  -o-transition: all 1s linear;
+  transition: all 1s linear; }
+
+.contact_circle:hover .info {
+  -webkit-transform: rotateY(180deg);
+  -moz-transform: rotateY(180deg);
+  -ms-transform: rotateY(180deg);
+  -o-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  -o-backface-visibility: hidden;
+  backface-visibility: hidden; }
+
+.face {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  -o-backface-visibility: hidden;
+  backface-visibility: hidden; }
+
+.face.back {
+  -webkit-transform: rotateY(180deg);
+  -moz-transform: rotateY(180deg);
+  -ms-transform: rotateY(180deg);
+  -o-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+  text-align: center; }
+
+.contact-text {
+  font-size: 0.5rem;
+  -webkit-transform: rotate(-25deg);
+  -moz-transform: rotate(-25deg);
+  -ms-transform: rotate(-25deg);
+  -o-transform: rotate(-25deg);
+  transform: rotate(-25deg); }
+  @media (min-width: 400px) {
+    .contact-text {
+      font-size: 0.6rem; } }
+  @media (min-width: 750px) {
+    .contact-text {
+      font-size: 0.7rem;
+      -webkit-transform: rotate(-60deg);
+      -moz-transform: rotate(-60deg);
+      -ms-transform: rotate(-60deg);
+      -o-transform: rotate(-60deg);
+      transform: rotate(-60deg); } }
+  @media (min-width: 750px) {
+    .contact-text {
+      font-size: 0.8rem;
+      padding: 0.2rem;
+      -webkit-transform: rotate(-60deg);
+      -moz-transform: rotate(-60deg);
+      -ms-transform: rotate(-60deg);
+      -o-transform: rotate(-60deg);
+      transform: rotate(-60deg); } }
+
+.contact-hero {
+  -webkit-transform: rotate(-25deg);
+  -moz-transform: rotate(-25deg);
+  -ms-transform: rotate(-25deg);
+  -o-transform: rotate(-25deg);
+  transform: rotate(-25deg); }
+
+html {
+  height: 100%; }
+
+body {
+  background: #fa7f7f;
+  min-height: 100vh; }
+
+.wrapper {
+  background: #2E3641;
+  height: auto;
+  table-layout: fixed;
+  min-height: 100vh;
+  overflow-x: hidden; }
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #CCD7E4; }
+
+.footer span {
+  font-size: 0.75em;
+  text-align: center; }
+  @media (min-width: 750px) {
+    .footer span {
+      font-size: 16px; } }
 
 /*# sourceMappingURL=main.css.map */
