--- a/css/main.css
+++ b/css/main.css
@@ -15,13 +15,11 @@
   right: 24px;
   /* z-index 11 to alwaus stay on top*/
   z-index: 11; }
-  @media (min-width: 750px) {
+  @media (min-width: 550px) {
     #menu {
       height: 6em;
       width: 4.5em;
-      top: -0.5em; } }
-  @media (min-width: 1000px) {
-    #menu {
+      top: -0.5em;
       visibility: hidden; } }
 
 .overlay {
@@ -79,6 +77,64 @@
   height: 1.5em;
   margin: 1em; }
 
+.header_nav {
+  visibility: hidden; }
+  @media (min-width: 550px) {
+    .header_nav {
+      visibility: visible; } }
+
+@-webkit-keyframes head-fade {
+  from {
+    opacity: 0.5; }
+  to {
+    opacity: 1; } }
+@-moz-keyframes head-fade {
+  from {
+    opacity: 0.5; }
+  to {
+    opacity: 1; } }
+@-ms-keyframes head-fade {
+  from {
+    opacity: 0.5; }
+  to {
+    opacity: 1; } }
+@-o-keyframes head-fade {
+  from {
+    opacity: 0.5; }
+  to {
+    opacity: 1; } }
+@keyframes head-fade {
+  from {
+    opacity: 0.5; }
+  to {
+    opacity: 1; } }
+@media (min-width: 550px) {
+  .nav_background {
+    width: 80%;
+    max-width: 960px;
+    background: #2E3641;
+    -webkit-animation-name: head-fade;
+    -webkit-animation-duration: 2s;
+    -webkit-animation-fill-mode: forwards;
+    -webkit-animation-iteration-count: 1;
+    /* forward prevents the animation from restarting! */
+    -moz-animation-name: head-fade;
+    -moz-animation-duration: 2s;
+    -moz-animation-fill-mode: forwards;
+    -moz-animation-iteration-count: 1;
+    -ms-animation-name: head-fade;
+    -ms-animation-duration: 2s;
+    -ms-animation-fill-mode: forwards;
+    -ms-animation-iteration-count: 1;
+    -o-animation-name: head-fade;
+    -o-animation-duration: 2s;
+    -o-animation-fill-mode: forwards;
+    -o-animation-iteration-count: 1;
+    animation-name: head-fade;
+    animation-duration: 2s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: 1; } }
+
 .yellow_topbox {
   background: #f8fba2;
   position: relative;
@@ -99,7 +155,7 @@
   left: 0;
   right: 0;
   width: 50%;
-  max-width: 1200px;
+  max-width: 960px;
   margin: 0 auto; }
 
 .contact_circle {
@@ -227,19 +283,25 @@ body {
   height: auto;
   table-layout: fixed;
   min-height: 100vh;
+  max-width: 1200px;
   overflow-x: hidden; }
 
 .footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #CCD7E4; }
+  color: #CCD7E4;
+  background: #2E3641;
+  padding: 3em; }
 
 .footer span {
-  font-size: 0.75em;
   text-align: center; }
-  @media (min-width: 750px) {
-    .footer span {
-      font-size: 16px; } }
+
+.logo {
+  height: 5.5em;
+  width: 4em; }
+
+header {
+  z-index: 9;
+  position: fixed;
+  width: 80%;
+  max-width: 960px; }
 
 /*# sourceMappingURL=main.css.map */
