--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,19 +21,28 @@ body {
     height: auto;
     table-layout: fixed;
     min-height: 100vh;
+    max-width: 1200px;
     overflow-x: hidden;
 }
 
 .footer {
-    @include flex-center;
     color: $light-gray;
+    background: $dark-gray;
+    padding: 3em;
 }
 
 .footer span {
-    font-size: 0.75em;
     text-align: center;
-    // ---------------------- Media queries
-    @include breakpoint(medium) {
-        font-size: $text-size;
-    }
+}
+
+.logo {
+    height: 5.5em;
+    width: 4em;
+}
+
+header {
+    z-index: 9;
+    position: fixed;
+    width: 80%;
+    max-width: 960px;
 }
