--- a/sass/_landing.scss
+++ b/sass/_landing.scss
@@ -1,12 +1,331 @@
-//Skeleton landing.scss
+/*--------Landingpage-hero--------------*/
 
 .landing-box {
-  width: 180vw;
-  background: $yellow;
-  height: 26em;
-  @include transform(rotate(25deg));
+    @include flex-center;
+    flex-direction: row;
+    background: $yellow;
+    width: 180vw;
+    height: 20em;
+    margin-top: $gutter * 8;
+    @include transform(rotate(25deg));
+    //query
+    @include breakpoint(small) {
+        margin-top: $gutter * 8;
+        height: 26rem;
+    }
+    ;
+    @include breakpoint(medium) {
+        //margin-top: $gutter * 10;
+    }
+    ;
+    @include breakpoint(large) {
+        margin-top: $gutter * 14;
+    }
+    ;
 }
 
 .container-hero {
-  @include transform(rotate(-25deg));
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    border-radius: 100%;
+    /*
+  height:20em;
+    width:20em;  */
+    width: 110vw;
+    height: 110vw;
+    position: relative;
+    border: 1rem solid $light-gray;
+    background: $red;
+    background-size: 100%;
+    overflow: hidden;
+    word-wrap: break-word;
+    @include transition(all 100s ease);
+    /*
+  @include breakpoint(xlarge){
+        height:40rem;
+        width: 40rem;
+    };  */
+
+
+}
+
+
+/*flexboxcontainer for images*/
+
+.flex-hero {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: space-around;
+    width: 100%;
+    height: 20%;
+}
+
+
+/*Elements with images and text about the employee*/
+
+@include keyframe(figure-start) {
+    from {
+        @include transform(translate(0, 0));
+    }
+    to {
+        @include transform(translate(-50%, -50%));
+    }
+}
+
+@include keyframe(figurelight) {
+    0% {
+        background: transparent;
+    }
+    50% {
+        background: $light-gray;
+    }
+    100% {
+        background: transparent;
+    }
+}
+
+;
+//Images
+.figure {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    opacity: 1;
+    top: 30%;
+    height: 4em;
+    width: 4em;
+    margin: 0 0 1em 0;
+    border-radius: 100%;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: 50%;
+    background: $light-gray;
+    text-align: center;
+    position: absolute;
+    /*
+  -webkit-perspective: 1000;
+    perspective: 1000;
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;  */
+
+
+    //@include animation(figurelight, 2s, none , infinite);
+    @include transition(all 0.5s ease);
+    @include transform(translate(-50%, -50%) rotate(-25deg));
+    left: 50%;
+    z-index: 10;
+    cursor: pointer;
+    &:first-child {
+        left: 30%;
+    }
+    &:last-child {
+        left: 70%;
+    }
+    //class that is set on click when figure is active.
+    &.is-active {
+        cursor: default;
+        height: 100%;
+        width: 100%;
+        top: 50%;
+        left: 50%;
+        z-index: 1000;
+        @include transition(all 0.5s ease);
+        top: 50%;
+        left: 50%;
+        overflow: hidden;
+        &:hover {
+            height: 100%;
+            width: 100%;
+        }
+        //Id for every persons profile-figure.
+        &#max {
+            background: url('../images/max2.jpg');
+            background-repeat: no-repeat;
+            background-size: contain;
+        }
+        &#joanna {
+            background: url('../images/joanna2.jpg');
+            background-repeat: no-repeat;
+            background-size: contain;
+        }
+        &#magnus {
+            background: url('../images/magnus2.jpg');
+            background-repeat: no-repeat;
+            background-size: contain;
+        }
+    }
+}
+
+//Hoverclass for profile-figure.
+.hover-figure {}
+
+.filter {
+    display: none;
+    &.active {
+        position: absolute;
+        display: inline;
+        background: $red;
+        top: 50%;
+        left: 50%;
+        width: 100%;
+        height: 100%;
+        @include transform(translate(-50%,
+        -50%));
+        z-index: 80;
+        margin-top: 0;
+        opacity: 0.2;
+        cursor: default;
+    }
+}
+
+//Content inside of figures.
+@include keyframe (figure-fade) {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+;
+.ghlink {
+    display: none;
+    opacity: 0;
+    z-index: 111;
+    //@include transition(all 1s ease);
+    &.active {
+        display: inline;
+        opacity: 1;
+        @include animation(figure-fade,
+        2s,
+        forwards,
+        1);
+    }
+}
+
+//Githib logo.
+.ghicon {
+    //@include transition(all 1s ease);
+    opacity: inherit;
+    height: 2em;
+    display: inherit;
+    z-index: 111;
+    position: absolute;
+    bottom: 14.5em;
+    left: 46%;
+    &.active {
+        display: inline;
+
+        cursor: pointer;
+
+    }
+    &:hover {
+        cursor: pointer;
+    }
+}
+
+//Icon that is pressed to go bacm from profile.
+.arrow {
+    display: none;
+    z-index: 111;
+    height: 2em;
+    position: absolute;
+    bottom: 1em;
+    left: 47%;
+    @include transition(all 1s ease);
+    opacity: 0;
+    cursor: pointer;
+    &.active {
+        display: inline;
+        opacity: 1;
+        @include animation(figure-fade,
+        2s,
+        forwards,
+        1);
+    }
+    &:hover {
+        cursor: pointer;
+    }
+}
+
+//class for profile text inside figure.
+.profile-text {
+    display: none;
+    opacity: 0;
+    width: 90vw;
+    @include transition(all 0.4s ease);
+    text-align: left;
+    word-wrap: break-word;
+    position: absolute;
+    left: -24%;
+    top: 30%;
+    margin: 2em 8em 0 8em;
+    position: absolute;
+    color: #fff;
+    &.active {
+        display: inline;
+        opacity: 1;
+        @include animation(figure-fade,
+        2s,
+        forwards,
+        1);
+        z-index: 111;
+    }
+}
+
+.profile-name {
+    left: -15%;
+    top: 0%;
+    display: none;
+    font-size: 1.2em;
+    text-align: left;
+    position: absolute;
+    &.active {
+        display: inline;
+        opacity: 1;
+        @include animation(figure-fade,
+        2s,
+        forwards,
+        1);
+        z-index: 111;
+    }
+}
+
+// Text inside of profile-figures.
+.hero-text-container {
+    @include transition(all 1s ease);
+    background: #fff;
+    width: 100%;
+}
+
+//text for presentation
+.hero-text {
+    word-wrap: break-word;
+    margin: 0 3em 0 3em;
+    text-align: center;
+    line-height: 1.5;
+    font-size: 1.2rem;
+}
+
+//letter MJM in figures.
+.hero-h1 {
+    //absolut?
+    //position: static;
+    align-self: center;
+    font-size: 3em;
+    margin: 0;
+    @include transform(rotate(25deg));
+    //color: #fff;
+    //@include transition(all 0.5s ease);
+    &:hover {}
+    &:first-child {}
+    &.active {
+        //@include transition(all 0.5s ease);
+        opacity: 0;
+    }
 }
