--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,11 +17,19 @@ body {
 }
 
 .wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background: $dark-gray;
     height: auto;
     table-layout: fixed;
     min-height: 100vh;
     overflow-x: hidden;
+
+    table-layout: fixed;
+    max-width: 2560px;
+    margin: 0 auto;
+
 }
 
 .footer {
