--- a/sass/_landing.scss
+++ b/sass/_landing.scss
@@ -25,28 +25,35 @@
 }
 
 .container-hero {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    border-radius: 100%;
-    /*
-  height:20em;
-    width:20em;  */
-    width: 110vw;
-    height: 110vw;
-    position: relative;
-    border: 1rem solid $light-gray;
-    background: $red;
-    background-size: 100%;
-    overflow: hidden;
-    word-wrap: break-word;
-    @include transition(all 100s ease);
-    /*
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  border-radius: 100%;
+  /*
+height:20em;
+  width:20em;  */
+  width: 110vw;
+  height: 110vw;
+  position: relative;
+  border: 1rem solid $light-gray;
+  background: $red;
+  background-size: 100%;
+  overflow: hidden;
+  word-wrap: break-word;
+  @include transition(all 100s ease);
+
+  @include breakpoint(xsmall){
+
+    height: 30em;
+    width: 30em;
+
+  }
+
   @include breakpoint(xlarge){
         height:40rem;
         width: 40rem;
-    };  */
+    };
 
 
 }
@@ -257,7 +264,6 @@
 .profile-text {
     display: none;
     opacity: 0;
-    width: 90vw;
     @include transition(all 0.4s ease);
     text-align: left;
     word-wrap: break-word;
