--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -3,28 +3,59 @@
     position: relative;
     left: -40vw;
     width: 180vw;
-    height: 26rem;
+    height: 30rem;
     margin: 0 auto;
     margin-top: 10em;
     z-index: 2;
     @include transform(rotate(25deg));
 }
 
-.yellow_container {
+.red_midbox {
+    background: $red;
+    color: white;
+    width: 180vw;
+    height: 30rem;
+    margin-top: 20rem;
+    z-index: 1;
+    @include transform(rotate(-10deg));
+    // ---------------------- Media queries
+}
+
+.content_container {
+    @include flex-center;
     position: absolute;
     left: 0;
     right: 0;
     width: 50%;
     max-width: 960px;
+    height: 26rem;
     margin: 0 auto;
+}
+
+.contact-section-1 {
+    @include breakpoint(small) {
+        height: 26rem;
+    }
+}
+
+.container-circles {
+    margin-top: 12em;
+    margin-left: 1em;
+    height: 26rem;
+    // ---------------------- Media queries
+    @include breakpoint(small) {
+        margin-top: -5em;
+        @include transform(rotate(125deg));
+    }
 }
 
 .contact_circle {
     position: relative;
     background: $red;
     border-radius: 50%;
-    width: 6em;
-    height: 6em;
+    margin: 0 auto;
+    width: 6rem;
+    height: 6rem;
     border: 0.5em solid $dark-gray;
     @include transform(rotate(-25deg));
     &:first-child {
@@ -39,9 +70,9 @@
         @include transform(scale(1.7));
         @include transition(all 1s ease);
     }
-    @include breakpoint(medium) {
-        width: 7em;
-        height: 7em;
+    @include breakpoint(small) {
+        width: 7rem;
+        height: 7rem;
     }
 }
 
@@ -89,4 +120,72 @@
 
 .contact-hero {
     @include transform(rotate(-25deg));
+}
+
+.contact-section-2 {
+    // display: none;
+    width: 80vw;
+    max-width: 1200px;
+    // margin-left: 12em;
+    margin-top: 5em;
+    text-align: center;
+    @include transform(rotate(10deg));
+    // ---------------------- Media queries
+    // @include breakpoint(medium) {
+    //     width: 42em;
+    // }
+    // @include breakpoint(xlarge) {
+    //     width: 20em;
+    //     &:first-child {
+    //         @include heading-3;
+    //     }
+    // }
+}
+
+.form_container {
+    @include flex-center;
+    position: absolute;
+    left: 0;
+    right: 0;
+    width: 100%;
+    max-width: 960px;
+    height: 50%;
+    margin: 0 auto;
+}
+
+@include keyframe(formMove) {
+    from {
+        top: 0%;
+    }
+    to {
+        top: 100%;
+    }
+}
+
+.form_circle {
+    @include flex-center;
+    text-align: center;
+    // flex-direction: column;
+    background: $light-green;
+    border-radius: 100%;
+    width: 100vw;
+    height: 100vw;
+    border: 0.5em solid $medium-gray;
+    position: absolute;
+    // Place it centered
+    left: 0;
+    right: 0;
+    // margin-left: auto;
+    // margin-right: auto;
+    @include animation(formMove, 3s, forwards, 1);
+    z-index: 7;
+    // ---------------------- Media queries
+    // @include breakpoint(small) {
+    //     width: 55vw;
+    //     height: 55vw;
+    // }
+    @include breakpoint(medium) {
+        width: 60em;
+        height: 60em;
+    }
 }
