--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@
   background: #f8fba2;
   width: 180vw;
   height: 20em;
-  margin-top: 128px;
+  margin-top: 160px;
   -webkit-transform: rotate(25deg);
   -moz-transform: rotate(25deg);
   -ms-transform: rotate(25deg);
@@ -24,7 +24,7 @@
   @media (min-width: 550px) {
     .landing-box {
       margin-top: 128px;
-      height: 26rem; } }
+      height: 30rem; } }
   @media (min-width: 1000px) {
     .landing-box {
       margin-top: 224px; } }
@@ -50,12 +50,12 @@
   transition: all 100s ease; }
   @media (min-width: 400px) {
     .container-hero {
-      height: 30rem;
-      width: 30rem; } }
+      height: 40rem;
+      width: 40rem; } }
   @media (min-width: 1200px) {
     .container-hero {
-      height: 30rem;
-      width: 30rem; } }
+      height: 40rem;
+      width: 40rem; } }
 
 /*flexboxcontainer for images*/
 .flex-hero {
@@ -740,6 +740,268 @@
   -ms-transform: rotate(-25deg);
   -o-transform: rotate(-25deg);
   transform: rotate(-25deg); }
+
+@-webkit-keyframes fade {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+@-moz-keyframes fade {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+@-ms-keyframes fade {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+@-o-keyframes fade {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+@keyframes fade {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+@-webkit-keyframes fade-out {
+  from {
+    opacity: 1;
+    display: flex; }
+  to {
+    opacity: 0;
+    display: none; } }
+@-moz-keyframes fade-out {
+  from {
+    opacity: 1;
+    display: flex; }
+  to {
+    opacity: 0;
+    display: none; } }
+@-ms-keyframes fade-out {
+  from {
+    opacity: 1;
+    display: flex; }
+  to {
+    opacity: 0;
+    display: none; } }
+@-o-keyframes fade-out {
+  from {
+    opacity: 1;
+    display: flex; }
+  to {
+    opacity: 0;
+    display: none; } }
+@keyframes fade-out {
+  from {
+    opacity: 1;
+    display: flex; }
+  to {
+    opacity: 0;
+    display: none; } }
+.about-box {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  height: 20rem;
+  width: 180vw;
+  background: #fa7f7f;
+  margin-top: 160px;
+  -webkit-transition: all 1.2s ease;
+  -moz-transition: all 1.2s ease;
+  -ms-transition: all 1.2s ease;
+  -o-transition: all 1.2s ease;
+  transition: all 1.2s ease;
+  -webkit-transform: rotate(25deg) translate(-20%, 0);
+  -moz-transform: rotate(25deg) translate(-20%, 0);
+  -ms-transform: rotate(25deg) translate(-20%, 0);
+  -o-transform: rotate(25deg) translate(-20%, 0);
+  transform: rotate(25deg) translate(-20%, 0);
+  text-align: left; }
+  .about-box.is-active {
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    height: auto;
+    margin: 0 0 10em 0;
+    -webkit-transform: translate(0, 10%);
+    -moz-transform: translate(0, 10%);
+    -ms-transform: translate(0, 10%);
+    -o-transform: translate(0, 10%);
+    transform: translate(0, 10%);
+    /*
+
+    @include breakpoint(xsmall){
+          height: 66em;
+    };
+    @include breakpoint(small){
+      height:68em;
+    };
+
+    @include breakpoint(medium){
+      height:74em;
+    };*/ }
+  @media (min-width: 550px) {
+    .about-box {
+      -webkit-transform: rotate(25deg) translate(-45%);
+      -moz-transform: rotate(25deg) translate(-45%);
+      -ms-transform: rotate(25deg) translate(-45%);
+      -o-transform: rotate(25deg) translate(-45%);
+      transform: rotate(25deg) translate(-45%); } }
+  @media (min-width: 1000px) {
+    .about-box {
+      margin-top: 160px; } }
+
+.about-h1 {
+  color: white;
+  -webkit-transform: rotate(-25deg);
+  -moz-transform: rotate(-25deg);
+  -ms-transform: rotate(-25deg);
+  -o-transform: rotate(-25deg);
+  transform: rotate(-25deg);
+  -webkit-transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  -ms-transition: all 1s ease;
+  -o-transition: all 1s ease;
+  transition: all 1s ease;
+  font-family: "Montserrat", sans-serif;
+  line-height: 1.5;
+  font-size: 2.5em;
+  margin: 0 2em 4em 0;
+  cursor: pointer; }
+  .about-h1.is-active {
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    transition: all 1s ease;
+    -webkit-transform: rotate(0);
+    -moz-transform: rotate(0);
+    -ms-transform: rotate(0);
+    -o-transform: rotate(0);
+    transform: rotate(0);
+    margin: 0; }
+    @media (min-width: 750px) {
+      .about-h1.is-active {
+        margin: 1em; } }
+
+.about-h4 {
+  text-align: center; }
+
+.about-article {
+  -webkit-transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  -ms-transition: all 1s ease;
+  -o-transition: all 1s ease;
+  transition: all 1s ease;
+  width: 100vw;
+  margin: 0;
+  opacity: 0;
+  display: none;
+  background: white; }
+  .about-article.is-active {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1s;
+    -webkit-animation-fill-mode: forwards;
+    -webkit-animation-iteration-count: 1;
+    /* forward prevents the animation from restarting! */
+    -moz-animation-name: fade;
+    -moz-animation-duration: 1s;
+    -moz-animation-fill-mode: forwards;
+    -moz-animation-iteration-count: 1;
+    -ms-animation-name: fade;
+    -ms-animation-duration: 1s;
+    -ms-animation-fill-mode: forwards;
+    -ms-animation-iteration-count: 1;
+    -o-animation-name: fade;
+    -o-animation-duration: 1s;
+    -o-animation-fill-mode: forwards;
+    -o-animation-iteration-count: 1;
+    animation-name: fade;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: 1;
+    opacity: 1;
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    transition: all 1s ease;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; }
+
+.article-container {
+  height: auto; }
+
+.about-p {
+  padding: 1rem;
+  /*
+  margin: 0 $gutter $gutter $gutter;
+  display: inherit;
+  opacity: inherit;
+  //width:80vw;
+  @include transition(all 1s ease);
+  @include breakpoint(small){
+    max-width: 425px;
+  };
+  @include breakpoint(medium){
+    max-width: 580px;
+  };
+  @include breakpoint(large){
+    width: 780px;
+    //margin:-1em $gutter * 4 1em $gutter *4;
+
+  };  */ }
+
+.about-img {
+  /*
+  width: 80vw;
+//queries
+  @include breakpoint(small){
+    max-width: 425px;
+  };
+  @include breakpoint(medium){
+    max-width: 580px;
+  };
+  @include breakpoint(large){
+    width:40em;
+  };  */ }
+
+.arrow-about {
+  cursor: pointer;
+  display: none;
+  height: 2em;
+  margin: 1em; }
+  .arrow-about.is-active {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 2s;
+    -webkit-animation-fill-mode: forwards;
+    -webkit-animation-iteration-count: 1;
+    /* forward prevents the animation from restarting! */
+    -moz-animation-name: fade;
+    -moz-animation-duration: 2s;
+    -moz-animation-fill-mode: forwards;
+    -moz-animation-iteration-count: 1;
+    -ms-animation-name: fade;
+    -ms-animation-duration: 2s;
+    -ms-animation-fill-mode: forwards;
+    -ms-animation-iteration-count: 1;
+    -o-animation-name: fade;
+    -o-animation-duration: 2s;
+    -o-animation-fill-mode: forwards;
+    -o-animation-iteration-count: 1;
+    animation-name: fade;
+    animation-duration: 2s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: 1;
+    display: inline;
+    opacity: 1; }
 
 html {
   height: 100%; }
