--- a/css/main.css
+++ b/css/main.css
@@ -653,20 +653,22 @@
   flex-direction: row; }
   @media (min-width: 550px) {
     .container-circles {
-      flex-direction: column;
-      -webkit-transform: rotate(25deg);
-      -moz-transform: rotate(25deg);
-      -ms-transform: rotate(25deg);
-      -o-transform: rotate(25deg);
-      transform: rotate(25deg); } }
+      -webkit-transform: rotate(-50deg);
+      -moz-transform: rotate(-50deg);
+      -ms-transform: rotate(-50deg);
+      -o-transform: rotate(-50deg);
+      transform: rotate(-50deg); } }
 
 .contact_circle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
   background: #fa7f7f;
   border-radius: 50%;
   margin: 0 auto;
-  width: 6rem;
-  height: 6rem;
+  width: 10rem;
+  height: 10rem;
   border: 0.5em solid #2E3641;
   -webkit-transform: rotate(-25deg);
   -moz-transform: rotate(-25deg);
@@ -692,11 +694,19 @@
     transition: all 1s ease; }
   @media (min-width: 550px) {
     .contact_circle {
+      width: 11rem;
+      height: 11rem;
       -webkit-transform: rotate(25deg);
       -moz-transform: rotate(25deg);
       -ms-transform: rotate(25deg);
       -o-transform: rotate(25deg);
       transform: rotate(25deg); } }
+
+.front,
+.back {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
 
 .info {
   width: 100%;
@@ -749,26 +759,13 @@
   -ms-transform: rotate(-25deg);
   -o-transform: rotate(-25deg);
   transform: rotate(-25deg); }
-  @media (min-width: 400px) {
+  @media (min-width: 550px) {
     .contact-text {
-      font-size: 0.6rem; } }
-  @media (min-width: 750px) {
-    .contact-text {
-      font-size: 0.7rem;
-      -webkit-transform: rotate(-60deg);
-      -moz-transform: rotate(-60deg);
-      -ms-transform: rotate(-60deg);
-      -o-transform: rotate(-60deg);
-      transform: rotate(-60deg); } }
-  @media (min-width: 750px) {
-    .contact-text {
-      font-size: 0.8rem;
-      padding: 0.2rem;
-      -webkit-transform: rotate(-60deg);
-      -moz-transform: rotate(-60deg);
-      -ms-transform: rotate(-60deg);
-      -o-transform: rotate(-60deg);
-      transform: rotate(-60deg); } }
+      -webkit-transform: rotate(25deg);
+      -moz-transform: rotate(25deg);
+      -ms-transform: rotate(25deg);
+      -o-transform: rotate(25deg);
+      transform: rotate(25deg); } }
 
 .contact-hero {
   -webkit-transform: rotate(-25deg);
@@ -994,6 +991,7 @@
   transition: all 1s ease;
   font-family: "Montserrat", sans-serif;
   line-height: 1.5;
+  font-weight: 700;
   font-size: 2.5em;
   margin: 0 2em 4em 0;
   cursor: pointer; }
@@ -1140,31 +1138,37 @@ noscript {
 h1 {
   font-family: "Montserrat", sans-serif;
   line-height: 1.5;
+  font-weight: 700;
   font-size: 3em; }
 
 h2 {
   font-family: "Montserrat", sans-serif;
   line-height: 1.5;
+  font-weight: 700;
   font-size: 2.5em; }
 
 h3 {
   font-family: "Montserrat", sans-serif;
   line-height: 1.5;
+  font-weight: 700;
   font-size: 2em; }
 
 h4 {
   font-family: "Montserrat", sans-serif;
   line-height: 1.5;
+  font-weight: 700;
   font-size: 1.5em; }
 
 h5 {
   font-family: "Montserrat", sans-serif;
   line-height: 1.5;
+  font-weight: 700;
   font-size: 1.2em; }
 
 h6 {
   font-family: "Montserrat", sans-serif;
   line-height: 1.5;
+  font-weight: 700;
   font-size: 0.5em; }
 
 p,
