--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -74,6 +74,7 @@
   @include heading-2;
   //top:1em;
   margin: 0 2em 4em 0;
+
   cursor: pointer;
   //position:absolute;
   //top:1em;
@@ -121,6 +122,7 @@
 
 .about-p {
   padding:1rem;
+  font-family:$text-face;
   /*
   margin: 0 $gutter $gutter $gutter;
   display: inherit;
@@ -145,6 +147,7 @@
 }
 
 .about-img {
+  margin-bottom: 2em;
   /*
   width: 80vw;
 //queries
