--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@
   background: #f8fba2;
   width: 180vw;
   height: 20em;
-  margin-top: 160px;
+  margin-top: 12rem;
   -webkit-transform: rotate(25deg);
   -moz-transform: rotate(25deg);
   -ms-transform: rotate(25deg);
@@ -27,7 +27,7 @@
       height: 30rem; } }
   @media (min-width: 1000px) {
     .landing-box {
-      margin-top: 224px; } }
+      margin-top: 15rem; } }
 
 .container-hero {
   display: flex;
@@ -60,11 +60,11 @@
 /*flexboxcontainer for images*/
 .flex-hero {
   display: flex;
-  justify-content: flex-start;
-  flex-direction: column;
-  align-items: space-around;
+  justify-content: space-around;
+  flex-direction: row;
+  align-items: center;
   width: 100%;
-  height: 20%; }
+  height: 40%; }
 
 /*Elements with images and text about the employee*/
 @-webkit-keyframes figure-start {
@@ -169,11 +169,11 @@
     background: transparent; } }
 .figure {
   display: flex;
-  align-items: center;
+  align-items: space-around;
   justify-content: center;
+  flex-direction: column;
   color: #fff;
   opacity: 1;
-  top: 30%;
   height: 4em;
   width: 4em;
   margin: 0 0 1em 0;
@@ -183,43 +183,38 @@
   background-position: 50%;
   background: #CCD7E4;
   text-align: center;
-  position: absolute;
-  -webkit-transition: all 0.5s ease;
-  -moz-transition: all 0.5s ease;
-  -ms-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-  -webkit-transform: translate(-50%, -50%) rotate(-25deg);
-  -moz-transform: translate(-50%, -50%) rotate(-25deg);
-  -ms-transform: translate(-50%, -50%) rotate(-25deg);
-  -o-transform: translate(-50%, -50%) rotate(-25deg);
-  transform: translate(-50%, -50%) rotate(-25deg);
+  -webkit-transition: all 0.4s ease;
+  -moz-transition: all 0.4s ease;
+  -ms-transition: all 0.4s ease;
+  -o-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+  -webkit-transform: rotate(-25deg);
+  -moz-transform: rotate(-25deg);
+  -ms-transform: rotate(-25deg);
+  -o-transform: rotate(-25deg);
+  transform: rotate(-25deg);
   left: 50%;
   z-index: 10;
   cursor: pointer; }
   @media (min-width: 550px) {
     .figure {
-      background: none;
-      top: 35%; } }
-  .figure:first-child {
-    left: 30%; }
-  .figure:last-child {
-    left: 70%; }
+      background: none; } }
   .figure.is-active {
+    -webkit-transform: translate(-50%, -50%) rotate(-25deg);
+    -moz-transform: translate(-50%, -50%) rotate(-25deg);
+    -ms-transform: translate(-50%, -50%) rotate(-25deg);
+    -o-transform: translate(-50%, -50%) rotate(-25deg);
+    transform: translate(-50%, -50%) rotate(-25deg);
     cursor: default;
     height: 100%;
     width: 100%;
     top: 50%;
     left: 50%;
     z-index: 1000;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -ms-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
     top: 50%;
     left: 50%;
-    overflow: hidden; }
+    overflow: hidden;
+    position: absolute; }
     .figure.is-active:hover {
       height: 100%;
       width: 100%; }
@@ -236,10 +231,83 @@
       background-repeat: no-repeat;
       background-size: contain; }
 
+/*
+.figure {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    opacity: 1;
+    top: 30%;
+    height: 4em;
+    width: 4em;
+    margin: 0 0 1em 0;
+    border-radius: 100%;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: 50%;
+    background: $light-gray;
+    text-align: center;
+    position: absolute;
+
+    @include transition(all 0.5s ease);
+    @include transform(translate(-50%, -50%) rotate(-25deg));
+    left: 50%;
+    z-index: 10;
+    cursor: pointer;
+
+    @include breakpoint(small){
+
+    background: none;
+    top: 35%;
+
+
+    };
+
+    &:first-child {
+        left: 30%;
+    }
+    &:last-child {
+        left: 70%;
+    }
+    //class that is set on click when figure is active.
+    &.is-active {
+        cursor: default;
+        height: 100%;
+        width: 100%;
+        top: 50%;
+        left: 50%;
+        z-index: 1000;
+        @include transition(all 0.5s ease);
+        top: 50%;
+        left: 50%;
+        overflow: hidden;
+        &:hover {
+            height: 100%;
+            width: 100%;
+        }
+        //Id for every persons profile-figure.
+        &#max {
+            background: url('../images/max2.jpg');
+            background-repeat: no-repeat;
+            background-size: contain;
+        }
+        &#joanna {
+            background: url('../images/joanna2.jpg');
+            background-repeat: no-repeat;
+            background-size: contain;
+        }
+        &#magnus {
+            background: url('../images/magnus2.jpg');
+            background-repeat: no-repeat;
+            background-size: contain;
+        }
+    }
+}*/
 @media (min-width: 550px) {
   .hover-figure:hover {
-    height: 8em;
-    width: 8em;
+    height: 7em;
+    width: 7em;
     background: #CCD7E4;
     color: black; } }
 
@@ -322,9 +390,10 @@
   height: 2em;
   display: inherit;
   z-index: 111;
-  position: absolute;
+  /*
+position: absolute;
   bottom: 14.5em;
-  left: 46%; }
+  left: 46%;  */ }
   .ghicon.active {
     display: inline;
     cursor: pointer; }
@@ -335,9 +404,10 @@
   display: none;
   z-index: 111;
   height: 2em;
-  position: absolute;
+  /*
+position: absolute;
   bottom: 1em;
-  left: 47%;
+  left: 47%;  */
   -webkit-transition: all 1s ease;
   -moz-transition: all 1s ease;
   -ms-transition: all 1s ease;
@@ -382,11 +452,12 @@
   transition: all 0.4s ease;
   text-align: left;
   word-wrap: break-word;
-  position: absolute;
+  width: 80%;
+  /*
+position: absolute;
   left: -24%;
-  top: 30%;
+  top: 30%;  */
   margin: 2em 8em 0 8em;
-  position: absolute;
   color: #fff; }
   .profile-text.active {
     display: inline;
@@ -415,12 +486,12 @@
     z-index: 111; }
 
 .profile-name {
-  left: -15%;
-  top: 0%;
+  /*
+left: -15%;
+  top: 0%;  */
   display: none;
   font-size: 1.2em;
-  text-align: left;
-  position: absolute; }
+  text-align: left; }
   .profile-name.active {
     display: inline;
     opacity: 1;
@@ -472,6 +543,9 @@
   -ms-transform: rotate(25deg);
   -o-transform: rotate(25deg);
   transform: rotate(25deg); }
+  @media (min-width: 400px) {
+    .hero-h1 {
+      font-size: 5em; } }
   .hero-h1.active {
     opacity: 0; }
 
@@ -1126,8 +1200,6 @@
     animation-iteration-count: 1;
     display: inline;
     opacity: 1; }
-<<<<<<< HEAD
-=======
 
 /*------------------------main content*/
 noscript {
@@ -1187,7 +1259,6 @@ label,
 input[type=submit] {
   font-family: "Montserrat", sans-serif;
   text-decoration: none; }
->>>>>>> master
 
 html {
   height: 100%; }
