--- a/css/main.css
+++ b/css/main.css
@@ -541,6 +541,10 @@
     .profile-name {
       left: -5%;
       top: 5%; } }
+  @media (min-width: 550px) {
+    .profile-name {
+      left: -3%;
+      top: 5%; } }
 
 .hero-text-container {
   -webkit-transition: all 1s ease;
@@ -1168,7 +1172,7 @@
   line-height: 1.5;
   font-weight: 700;
   font-size: 2.5em;
-  margin: 0 2em 4em 0;
+  margin: 0 2em 1em 0;
   cursor: pointer; }
   .about-h1.is-active {
     -webkit-transition: all 1s ease;
@@ -1238,39 +1242,10 @@
 
 .about-p {
   padding: 1rem;
-  font-family: "Playfair Display", serif;
-  /*
-  margin: 0 $gutter $gutter $gutter;
-  display: inherit;
-  opacity: inherit;
-  //width:80vw;
-  @include transition(all 1s ease);
-  @include breakpoint(small){
-    max-width: 425px;
-  };
-  @include breakpoint(medium){
-    max-width: 580px;
-  };
-  @include breakpoint(large){
-    width: 780px;
-    //margin:-1em $gutter * 4 1em $gutter *4;
-
-  };  */ }
+  font-family: "Playfair Display", serif; }
 
 .about-img {
-  margin-bottom: 2em;
-  /*
-  width: 80vw;
-//queries
-  @include breakpoint(small){
-    max-width: 425px;
-  };
-  @include breakpoint(medium){
-    max-width: 580px;
-  };
-  @include breakpoint(large){
-    width:40em;
-  };  */ }
+  margin-bottom: 2em; }
 
 .arrow-about {
   cursor: pointer;
