--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -1,24 +1,24 @@
 //animation for about.
 @include keyframe (fade) {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
+  from {
+      opacity: 0;
+  }
+  to {
+      opacity: 1;
+  }
 }
 @include keyframe (fade-out) {
-    from {
-        opacity: 1;
-        display: flex;
-        //flex-direction: row;
-    }
-    to {
-        opacity: 0;
-        display:none;
-        //flex-direction: column;
-    }
+  from {
+    opacity: 1;
+    display: flex;
+  }
+  to {
+    opacity: 0;
+    display:none;
+
+  }
 }
+
 //section for about.
 .about-box {
   position:relative;
@@ -42,28 +42,13 @@
     height:auto;
     margin:0 0 10em 0;
     @include transform(translate(0, 10%));
-    /*
-
-    @include breakpoint(xsmall){
-          height: 66em;
-    };
-    @include breakpoint(small){
-      height:68em;
-    };
-
-    @include breakpoint(medium){
-      height:74em;
-    };*/
-
-
   }
   //queries
   @include breakpoint(small){
     @include transform(rotate(25deg) translate(-45%));
   };
   @include breakpoint(large){
-    margin-top:$gutter * 10
-
+    margin-top:$gutter * 10;
   };
 }
 
@@ -72,13 +57,8 @@
   @include transform(rotate(-25deg));
   @include transition(all 1s ease);
   @include heading-2;
-  //top:1em;
   margin: 0 2em 1em 0;
-
   cursor: pointer;
-  //position:absolute;
-  //top:1em;
-  //margin: 1em 1em 1em 1em;
 
   &.is-active {
     @include transition(all 1s ease);
@@ -89,9 +69,11 @@
     };
   }
 }
+
 .about-h4 {
   text-align: center;
 }
+
 .about-article {
   @include transition(all 1s ease);
   width: 100vw;
@@ -103,21 +85,15 @@
   &.is-active {
     @include animation(fade, 1s, forwards, 1);
     opacity: 1;
-    @include transition(all 1s ease);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
   }
-  @include breakpoint(medium){
-
-  };
-
 }
 
 .article-container {
   height:auto;
-
 }
 
 .about-p {
@@ -128,6 +104,7 @@
 .about-img {
   margin-bottom: 2em;
 }
+
 .arrow-about {
   cursor: pointer;
   display: none;
