--- a/sass/_landing.scss
+++ b/sass/_landing.scss
@@ -2,27 +2,21 @@
 
 .landing-box {
   padding:0;
-    @include flex-center;
-    flex-direction: row;
-    background: $yellow;
-    width: 180vw;
-    height: 20em;
-    margin-top: 12rem;
-    @include transform(rotate(25deg));
-    //query
-    @include breakpoint(small) {
-        margin-top: $gutter * 8;
-        height: 30rem;
-    }
-    ;
-    @include breakpoint(medium) {
-        //margin-top: $gutter * 10;
-    }
-    ;
-    @include breakpoint(large) {
-        margin-top:15rem;
-    }
-    ;
+  @include flex-center;
+  flex-direction: row;
+  background: $yellow;
+  width: 180vw;
+  height: 20em;
+  margin-top: 12rem;
+  @include transform(rotate(25deg));
+  //query
+  @include breakpoint(small) {
+    margin-top: $gutter * 8;
+    height: 30rem;
+  };
+  @include breakpoint(large) {
+    margin-top:15rem;
+  };
 }
 
 .container-hero {
@@ -39,28 +33,20 @@
   background-size: 100%;
   overflow: hidden;
   word-wrap: break-word;
-
-
   @include transition(all 100s ease);
 
   @include breakpoint(xsmall){
-
     height: 40rem;
     width: 40rem;
-
   }
 
   @include breakpoint(xlarge){
-        height:40rem;
-        width: 40rem;
-    };
-
-
+    height:40rem;
+    width: 40rem;
+  };
 }
 
-
-/*flexboxcontainer for images*/
-
+//flexboxcontainer for images
 .flex-hero {
   display: flex;
   justify-content: center;
@@ -68,360 +54,271 @@
   align-items: center;
   width: 100%;
   height: 25%;
-
 }
 
 
-/*Elements with images and text about the employee*/
-
+//Elements with images and text about the employee
 @include keyframe(figure-start) {
-    from {
-        @include transform(translate(0, 0));
-    }
-    to {
-        @include transform(translate(-50%, -50%));
-    }
+  from {
+      @include transform(translate(0, 0));
+  }
+  to {
+      @include transform(translate(-50%, -50%));
+  }
 }
 
 @include keyframe(figurelight) {
-    0% {
-        background: transparent;
-    }
-    50% {
-        background: $light-gray;
-    }
-    100% {
-        background: transparent;
-    }
-}
+  0% {
+      background: transparent;
+  }
+  50% {
+      background: $light-gray;
+  }
+  100% {
+      background: transparent;
+  }
+};
 
-;
-/*
-//Images
+//Letter MJM on landing that shows profile on click.
 .figure {
-    display: flex;
-    align-items: space-around;
-    justify-content: center;
-    flex-direction: column;
-    color: #fff;
-    opacity: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  opacity: 1;
+  top: 40%;
+  height: 5em;
+  width: 5em;
+  margin: 0 0 1em 0;
+  border-radius: 100%;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: 50%;
+  background: $light-gray;
+  text-align: center;
+  position: absolute;
+  @include transition(all 0.5s ease);
+  @include transform(translate(-50%, -50%) rotate(-25deg));
+  left: 50%;
+  z-index: 10;
+  cursor: pointer;
 
-    height: 4em;
-    width: 4em;
-    margin: 0 0 1em 0;
-    border-radius: 100%;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: 50%;
-    background: $light-gray;
-    text-align: center;
-    //position:absolute;
+  @media screen and (min-width:360px){
+    height: 6.3em;
+    width: 6.3em;
+  }
 
-    @include transition(all 0.4s ease);
-    @include transform(rotate(-25deg));
-    left: 50%;
-    z-index: 10;
-    cursor: pointer;
-
-    @include breakpoint(small){
-
+  @include breakpoint(small){
     background: none;
-    //top: 35%;
+  };
 
-
-    };
-
-    &:first-child {
-        //left: 30%;
-    }
-    &:last-child {
-        //left: 70%;
-    }
-    //class that is set on click when figure is active.
-    &.is-active {
-        @include transform(translate(-50%,-50%) rotate(-25deg));
-
-        cursor: default;
-        height: 100%;
-        width: 100%;
-        top: 50%;
-        left: 50%;
-        z-index: 1000;
-        top: 50%;
-        left: 50%;
-        overflow: hidden;
-        position:absolute;
-
-        &:hover {
-            height: 100%;
-            width: 100%;
-        }
-        //Id for every persons profile-figure.
-        &#max {
-            background: url('../images/max2.jpg');
-            background-repeat: no-repeat;
-            background-size: contain;
-        }
-        &#joanna {
-            background: url('../images/joanna2.jpg');
-            background-repeat: no-repeat;
-            background-size: contain;
-        }
-        &#magnus {
-            background: url('../images/magnus2.jpg');
-            background-repeat: no-repeat;
-            background-size: contain;
-        }
-    }
-}*/
-
-
-
-.figure {
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #fff;
-    opacity: 1;
-    top: 40%;
-    height: 5em;
-    width: 5em;
-    margin: 0 0 1em 0;
-    border-radius: 100%;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: 50%;
-    background: $light-gray;
-    text-align: center;
-    position: absolute;
-    @include transition(all 0.5s ease);
-    @include transform(translate(-50%, -50%) rotate(-25deg));
+  &:first-child {
+    left: 25%;
+  }
+  &:last-child {
+    left: 75%;
+  }
+  //class that is set on click when figure is active.
+  &.is-active {
+    cursor: default;
+    height: 100%;
+    width: 100%;
+    top: 50%;
     left: 50%;
-    z-index: 10;
-    cursor: pointer;
+    z-index: 1000;
+    @include transition(all 0.5s ease);
+    top: 50%;
+    left: 50%;
+    overflow: hidden;
 
-    @media screen and (min-width:360px){
-      height: 6.3em;
-      width: 6.3em;
+    &:hover {
+      height: 100%;
+      width: 100%;
     }
-
-    @include breakpoint(small){
-      background: none;
-    };
-
-    &:first-child {
-      left: 25%;
+    //Id for every persons profile-figure.
+    &#max {
+      background: url('../images/max2.jpg');
+      background-repeat: no-repeat;
+      background-size: contain;
     }
-    &:last-child {
-      left: 75%;
+    &#joanna {
+      background: url('../images/joanna2.jpg');
+      background-repeat: no-repeat;
+      background-size: contain;
     }
-    //class that is set on click when figure is active.
-    &.is-active {
-        cursor: default;
-        height: 100%;
-        width: 100%;
-        top: 50%;
-        left: 50%;
-        z-index: 1000;
-        @include transition(all 0.5s ease);
-        top: 50%;
-        left: 50%;
-        overflow: hidden;
-        &:hover {
-            height: 100%;
-            width: 100%;
-        }
-        //Id for every persons profile-figure.
-        &#max {
-            background: url('../images/max2.jpg');
-            background-repeat: no-repeat;
-            background-size: contain;
-        }
-        &#joanna {
-            background: url('../images/joanna2.jpg');
-            background-repeat: no-repeat;
-            background-size: contain;
-        }
-        &#magnus {
-            background: url('../images/magnus2.jpg');
-            background-repeat: no-repeat;
-            background-size: contain;
-        }
+    &#magnus {
+      background: url('../images/magnus2.jpg');
+      background-repeat: no-repeat;
+      background-size: contain;
     }
+  }
 }
-
-
 
 //Hoverclass for profile-figure.
 .hover-figure {
   @include breakpoint(small){
     &:hover {
-              height: 7em;
-              width: 7em;
-              background: $light-gray;
-              color: black;
-        }
+      height: 7em;
+      width: 7em;
+      background: $light-gray;
+      color: black;
+    }
   };
 }
 
 .filter {
-    display: none;
-    &.active {
-        position: absolute;
-        display: inline;
-        background: $red;
-        top: 50%;
-        left: 50%;
-        width: 100%;
-        height: 100%;
-        @include transform(translate(-50%,
-        -50%));
-        z-index: 80;
-        margin-top: 0;
-        opacity: 0.2;
-        cursor: default;
-    }
+  display: none;
+  &.active {
+    position: absolute;
+    display: inline;
+    background: $red;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    @include transform(translate(-50%,
+    -50%));
+    z-index: 80;
+    margin-top: 0;
+    opacity: 0.2;
+    cursor: default;
+  }
 }
 
 //Content inside of figures.
 @include keyframe (figure-fade) {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
+  from {
+      opacity: 0;
+  }
+  to {
+      opacity: 1;
+  }
 }
 
 ;
 .ghlink {
-    display: none;
-    opacity: 0;
-    z-index: 111;
-    //@include transition(all 1s ease);
-    &.active {
-        display: inline;
-        opacity: 1;
-        @include animation(figure-fade,
-        2s,
-        forwards,
-        1);
-    }
+  display: none;
+  opacity: 0;
+  z-index: 111;
+
+  &.active {
+    display: inline;
+    opacity: 1;
+    @include animation(figure-fade,
+    2s,
+    forwards,
+    1);
+  }
 }
 
 //Githib logo.
 .ghicon {
-    //@include transition(all 1s ease);
-    opacity: inherit;
-    height: 2em;
-    display: inherit;
-    z-index: 111;
-    position: absolute;
-    bottom: 15.5em;
-    left: 46%;
+  opacity: inherit;
+  height: 2em;
+  display: inherit;
+  z-index: 111;
+  position: absolute;
+  bottom: 15.5em;
+  left: 46%;
 
+  &.active {
+    display: inline;
+    cursor: pointer;
+  }
 
+  &:hover {
+    cursor: pointer;
+  }
 
-    &.active {
-        display: inline;
-        cursor: pointer;
+  @media screen and (min-width:360px){
+    bottom: 18em;
+  }
 
-    }
-    &:hover {
-        cursor: pointer;
-    }
-    @media screen and (min-width:360px){
-      bottom: 18em;
-    }
-    @include breakpoint(xsmall){
-      bottom: 17em;
-    };
-
+  @include breakpoint(xsmall){
+    bottom: 17em;
+  };
 }
 
 //Icon that is pressed to go bacm from profile.
 .arrow {
-    display: none;
-    z-index: 111;
-    height: 2em;
+  display: none;
+  z-index: 111;
+  height: 2em;
+  position: absolute;
+  bottom: 1em;
+  left: 47%;
+  @include transition(all 1s ease);
+  opacity: 0;
+  cursor: pointer;
 
-    position: absolute;
-    bottom: 1em;
-    left: 47%;
-
-
-    @include transition(all 1s ease);
-    opacity: 0;
+  &.active {
+    display: inline;
+    opacity: 1;
+    @include animation(figure-fade,
+    2s,
+    forwards,
+    1);
+  }
+  &:hover {
     cursor: pointer;
-    &.active {
-        display: inline;
-        opacity: 1;
-        @include animation(figure-fade,
-        2s,
-        forwards,
-        1);
-    }
-    &:hover {
-        cursor: pointer;
-    }
+  }
 }
 
 //class for profile text inside figure.
 .profile-text {
-    display: none;
-    opacity: 0;
-    @include transition(all 0.4s ease);
-    text-align: left;
-    word-wrap: break-word;
-    width: 80%;
+  display: none;
+  opacity: 0;
+  @include transition(all 0.4s ease);
+  text-align: left;
+  word-wrap: break-word;
+  width: 80%;
 
-    position: absolute;
-    left: -24%;
-    top: 30%;
+  position: absolute;
+  left: -24%;
+  top: 30%;
 
 
-    margin: 2em 8em 0 8em;
-    position: absolute;
-    color: #fff;
-    &.active {
-        display: inline;
-        opacity: 1;
-        @include animation(figure-fade,
-        2s,
-        forwards,
-        1);
-        z-index: 111;
-    }
-    @include breakpoint(xsmall){
-      left: -20%;
-    };
+  margin: 2em 8em 0 8em;
+  position: absolute;
+  color: #fff;
+  &.active {
+      display: inline;
+      opacity: 1;
+      @include animation(figure-fade,
+      2s,
+      forwards,
+      1);
+      z-index: 111;
+  }
+  @include breakpoint(xsmall){
+    left: -20%;
+  };
 }
 
 .profile-name {
-    left: -10%;
-    top: 0%;
-    display: none;
-    font-size: 1.2em;
-    text-align: left;
-    position: absolute;
-    &.active {
-        display: inline;
-        opacity: 1;
-        @include animation(figure-fade,
-        2s,
-        forwards,
-        1);
-        z-index: 111;
-    }
-    @include breakpoint(xsmall){
-      left: -5%;
-      top:5%;
-    };
-    @include breakpoint(small){
-      left: -3%;
-      top:5%;
-    };
+  left: -10%;
+  top: 0%;
+  display: none;
+  font-size: 1.2em;
+  text-align: left;
+  position: absolute;
+  &.active {
+      display: inline;
+      opacity: 1;
+      @include animation(figure-fade,
+      2s,
+      forwards,
+      1);
+      z-index: 111;
+  }
+  @include breakpoint(xsmall){
+    left: -5%;
+    top:5%;
+  };
+  @include breakpoint(small){
+    left: -3%;
+    top:5%;
+  };
 }
 
 // Text inside of profile-figures.
