--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -2,8 +2,8 @@
     /* Mobile Navigation */
     
     #menu {
-        height: 5.5em;
-        width: 4em;
+        height: 6em;
+        width: 4.5em;
         position: fixed;
         // top: -0.3em;
         top: 0.5em;
@@ -13,9 +13,11 @@
         cursor: pointer;
         // ---------------------- Media queries
         @include breakpoint(small) {
-            height: 6em;
-            width: 4.5em;
+            height: 9em;
+            width: 5em;
             top: -0.5em;
+        }
+        @include breakpoint(medium) {
             visibility: hidden;
         }
     }
@@ -47,13 +49,9 @@
         padding: $gutter /2;
         text-decoration: none;
         color: white;
-        font-size: 2rem;
+        font-size: 2.5rem;
         line-height: 1.5;
         transition: 0.5s;
-        // ---------------------- Media queries
-        @include breakpoint(medium) {
-            font-size: 2em;
-        }
     }
     
     .overlay a:hover,
@@ -69,8 +67,12 @@
     
     .header_nav {
         visibility: hidden;
+        display: flex;
+        justify-content: flex-end;
+        font-size: 1.5em;
+        width: 100%;
         // ---------------------- Media queries
-        @include breakpoint(small) {
+        @include breakpoint(medium) {
             visibility: visible;
         }
     }
@@ -90,4 +92,20 @@
             background: $dark-gray;
             @include animation(head-fade, 2s, forwards, 1);
         }
+    }
+    
+    .nav_link {
+        margin-right: $main-margin * 2;
+        &:last-child {
+            margin-right: $main-margin;
+        }
+    }
+    
+    .header_nav a {
+        color: $light-green;
+    }
+    
+    .header_nav a:hover,
+    .header_nav a:focus {
+        color: white;
     }
